Add Stay Healthy fitness goal option

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <option value="">Select Goal</option>
                         <option value="weight_loss">Weight Loss</option>
                         <option value="weight_gain">Weight Gain</option>
+                        <option value="stay_healthy">Stay Healthy</option>
                     </select>
                 </div>
 
