Migrate from Groq to OpenRouter with DeepSeek-V3 model

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                 </div>
                                 <div class="food-item">
                                     <div class="food-header">
-                                        <span class="food-name">Tata Sampann Masoor Dal Whole (100g cooked)</span>
+                                        <span class="food-name">Masoor Dal Whole (100g cooked)</span>
                                         <a href="https://www.tatanutrikorner.com/products/tata-sampann-masoor-dal-whole" target="_blank" class="product-link-btn">Link</a>
                                     </div>
                                     <div class="nutrition-values">
@@ -338,7 +338,7 @@
                                 </div>
                                 <div class="food-item">
                                     <div class="food-header">
-                                        <span class="food-name">Tata Sampann Moong Dal (100g cooked)</span>
+                                        <span class="food-name">Moong Dal (100g cooked)</span>
                                         <a href="https://www.tatanutrikorner.com/products/tata-sampann-moong-dal" target="_blank" class="product-link-btn">Link</a>
                                     </div>
                                     <div class="nutrition-values">
@@ -350,7 +350,7 @@
                                 </div>
                                 <div class="food-item">
                                     <div class="food-header">
-                                        <span class="food-name">Tata Sampann Urad Dal Kali (100g cooked)</span>
+                                        <span class="food-name">Urad Dal Kali (100g cooked)</span>
                                         <a href="https://www.tatanutrikorner.com/products/tata-sampann-urad-dal-kali" target="_blank" class="product-link-btn">Link</a>
                                     </div>
                                     <div class="nutrition-values">
@@ -362,7 +362,7 @@
                                 </div>
                                 <div class="food-item">
                                     <div class="food-header">
-                                        <span class="food-name">Tata Sampann Kabuli Chana (100g cooked)</span>
+                                        <span class="food-name">Kabuli Chana (100g cooked)</span>
                                         <a href="https://www.tatanutrikorner.com/products/tata-sampann-kabooli-chana" target="_blank" class="product-link-btn">Link</a>
                                     </div>
                                     <div class="nutrition-values">
@@ -374,7 +374,7 @@
                                 </div>
                                 <div class="food-item">
                                     <div class="food-header">
-                                        <span class="food-name">Tata Sampann Organic Red Rajma (100g cooked)</span>
+                                        <span class="food-name">Organic Red Rajma (100g cooked)</span>
                                         <a href="https://www.tatanutrikorner.com/products/tata-sampann-organic-red-rajma" target="_blank" class="product-link-btn">Link</a>
                                     </div>
                                     <div class="nutrition-values">
