Add PDF download functionality with customized report layout

--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
                     </div>
                 </div>
 
+                <div class="pdf-download-section">
+                    <button id="downloadPdfBtn" class="pdf-download-btn">
+                        <span class="pdf-icon">📄</span>
+                        <span class="pdf-text">Download Full Report (PDF)</span>
+                    </button>
+                </div>
+
                 <div class="projection-section">
                     <h3>Weight Change Projection</h3>
                     <div class="projection-grid">
@@ -579,6 +586,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="config.js"></script>
     <script src="script.js"></script>
     <script src="chatbot.js"></script>
